# NearToolbox

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  simple_tx.cpp  simple_tx_with_ledger.cpp  smart_contract_call.cpp
extlibs/base58/: CMakeLists.txt
extlibs/base58/include/base58/: base58.hpp  base64.hpp
extlibs/base58/src/: base58.cpp  base64.cpp
extlibs/bignumber/: CMakeLists.txt
extlibs/bignumber/include/bignumber/: bignumber.hpp
extlibs/bignumber/src/: bignumber.cpp
extlibs/borsch/: CMakeLists.txt
extlibs/borsch/include/borsch/: borsch.hpp
extlibs/borsh/: CMakeLists.txt
extlibs/borsh/include/borsh/: borsh.hpp  visit_struct.hpp
extlibs/ed25519/: CMakeLists.txt  LICENSE
extlibs/ed25519/src/: ge.c
extlibs/fmt/: CMakeLists.txt
extlibs/httplib/: CMakeLists.txt
extlibs/magic_enum/: CMakeLists.txt
extlibs/nearledger/: CMakeLists.txt  LICENSE
extlibs/nearledger/include/nearledger/: comm.hpp  hid_device.hpp  ledger.hpp  transport.hpp  utils.hpp
extlibs/nearledger/src/: error.cpp  hid_device.cpp  ledger.cpp  transport.cpp  utils.cpp
extlibs/nlohmann/: CMakeLists.txt
extlibs/result/: CMakeLists.txt
extlibs/sha256/: CMakeLists.txt
extlibs/sha256/include/sha256/: sha256.hpp
extlibs/sha256/src/: sha256.cpp
include/: dllexport.h  ledger.h  string_utils.hpp
include/ntb/: dllexport.h  encoders.hpp  ledger.h  near.hpp  near_utils.hpp  rpc.hpp  schemas.hpp  signer.hpp  string_utils.hpp
integrations/godot/: CMakeLists.txt
integrations/godot/examples/: simple_tx.gd
integrations/godot/src/: near_client_wrapper.cpp  near_client_wrapper.h  register_types.cpp  register_types.h
integrations/unity/: CMakeLists.txt
integrations/unity/include/ntb_unity/: ntb.h
integrations/unity/scripts/: NearClient.cs
integrations/unity/src/: ntb_unity.cpp
src/: encoders.cpp  ledger.cpp  near.cpp  near_utils.cpp  rpc.cpp  signer.cpp  string_utils.cpp
